--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "files": [
+    "bin",
     "src"
   ],
   "repository": "github:bytearcher/static-site-image-width-height-enricher",
