--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "repository": "github:bytearcher/static-site-image-width-height-enricher",
   "dependencies": {
+    "glob": "7.1.6",
     "image-size": "0.9.1"
   },
   "devDependencies": {
